# weather-ml

./: README.md  prek.toml  pyproject.toml
configs/: config.yaml
configs/hardware/: local.yaml
configs/model/: gnn.yaml  linear_baseline.yaml  unet.yaml
configs/training/: default.yaml
notebooks/: 01_xarray_basics.ipynb  02_data_pipeline.ipynb  03_training_analysis.ipynb
src/weather_ml/: train.py
src/weather_ml/models/: gnn.py  linear.py  random_forest.py  unet.py
tests/: test_dataset.py  test_gnn.py  test_model.py
