[project]
name = "weather-ml"
version = "0.1.0"
description = "Weather ML practice project — xarray, PyTorch Lightning, Hydra"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "lightning>=2.2",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
